Set up native Oniguruma build